--- a/V2RaycSpider1225/requirements.txt
+++ b/V2RaycSpider1225/requirements.txt
@@ -1,16 +1,12 @@
-paramiko
-PyInstaller
+paramiko~=2.7.2
 APScheduler==3.7.0
 beautifulsoup4==4.9.3
 bs4==0.0.1
 easygui==0.98.2
-Faker==5.8.0
 Flask==1.1.2
 gevent==21.1.2
-greenlet==1.0.0
 loguru==0.5.3
 Pillow>=8.2.0
-pycparser==2.20
 PyMySQL==1.0.2
 pyperclip==1.8.1
 pytz==2020.5
@@ -19,3 +15,6 @@ redis==3.5.3
 requests==2.25.1
 schedule==0.6.0
 selenium==3.141.0
+tqdm~=4.56.0
+colorama~=0.4.4
+faker~=5.8.0
