--- a/V2RaycSpider1225/src/config-sample.yaml
+++ b/V2RaycSpider1225/src/config-sample.yaml
@@ -139,6 +139,13 @@ MYSQL_CONFIG:
 API_PORT: 6500
 
 # ---------------------------------------------------
+# TODO (√)The domain name used to deploy the gardener
+# 园丁系统部署域名，当启动该项功能时，必须配置如: www.bbq.club
+# 由于性能受限，该域名必须为当前主机的域名
+# ---------------------------------------------------
+GARDENER_HOST: ''
+
+# ---------------------------------------------------
 # TODO (*)Communication port for micro-service
 # ---------------------------------------------------
 REC_PORT: 6600
