--- a/V2RaycSpider1225/src/config-sample.yaml
+++ b/V2RaycSpider1225/src/config-sample.yaml
@@ -154,7 +154,8 @@ REC_PORT: 6600
 # TODO (*)Noticer -- 用于发送panic信息警报，默认发送给自己
 # 1. 当只需要发送给自己时推荐使用SERVER酱，两种通讯方式SERVER酱优先级更高
 # 2. 此项非必要填写，若为空则不会发送警告信息
-# ---------------------------------------------------
+# ===================================================
+
 # ---------------------------------------------------
 # 1. 使用Email推送-推荐使用QQ邮箱，开启邮箱SMTP服务教程如下
 # https://service.mail.qq.com/cgi-bin/help?subtype=1&&id=28&&no=1001256
@@ -166,8 +167,8 @@ SMTP_ACCOUNT:
   sid: ''
 
 # ---------------------------------------------------
-# 2. 使用<SERVER酱>推送，请在SERVER_CHAN_SCKEY填写自己的Key
+# 2. 使用<SERVER酱>推送，请在SERVERCHAN_SCKEY填写自己的Key
 # http://sc.ftqq.com/3.version
 # ---------------------------------------------------
-SERVER_CHAN_SCKEY: ''
+SERVERCHAN_SCKEY: ''
 
