--- a/V2RaycSpider1225/requirements.txt
+++ b/V2RaycSpider1225/requirements.txt
@@ -13,8 +13,10 @@ pillow>=8.3.1
 gevent>=21.1.2
 tqdm>=4.56.0
 paramiko>=2.7.2
-urllib3>=1.26.6
+urllib3==1.25.11
 apscheduler>=3.7.0
 pymysql>=1.0.2
 faker>=5.8.0
 colorama>=0.4.4
+pysimplegui>=4.46.0
+retry>=0.9.2
