--- a/V2RaycSpider1225/requirements.txt
+++ b/V2RaycSpider1225/requirements.txt
@@ -1,18 +1,22 @@
 fire>=0.4.0
-colorama>=0.4.4
-pytz>=2021.3
-pyyaml>=6.0
 requests>=2.26.0
-gevent>=21.8.0
-redis>=4.0.1
+telethon>=1.24.0
+sanic>=21.12.0
 bs4>=0.0.1
 beautifulsoup4>=4.10.0
-loguru>=0.5.3
+cloudscraper>=1.2.58
 selenium>=4.1.0
 pillow>=8.4.0
 pydub>=0.25.1
-cloudscraper>=1.2.58
+colorama>=0.4.4
+pytz>=2021.3
+pyyaml>=6.0
+loguru>=0.5.3
+gevent>=21.8.0
 tqdm>=4.62.3
+urllib3>=1.25.11
 apscheduler>=3.8.1
-sanic>=21.12.0
+playwright>=1.17.2
+redis>=4.0.1
 SpeechRecognition
+webdriver-manager
